# qdrant-mcp

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
docs/: install-qdrant-native.md
src/: allure_client.py  allure_indexer.py  allure_qdrant_store.py  allure_sync.py  embedder.py  indexer.py  main.py  openapi_curl.py  qdrant_store.py  rag_sources.py  rag_sync_cli.py  tool_utils.py
src/qdrant_mcp/: __init__.py  allure_client.py  allure_indexer.py  allure_qdrant_store.py  allure_sync.py  allure_tools.py  confluence_sync.py  confluence_tools.py  confluence_utils.py  embedder.py  indexer.py  main.py  openapi_fetcher.py  openapi_indexer.py  openapi_intent.py  openapi_parser.py  openapi_qdrant_store.py  openapi_tools.py  qdrant_store.py  qdrant_utils.py  rag_sources.py  rag_sync.py  rag_sync_cli.py  server.py  sync_batch.py  sync_state_store.py  sync_tools.py  tool_utils.py
tests/: conftest.py  test_allure_sync.py  test_confluence_sync.py  test_embedder.py  test_embedder_config.py  test_main_tools.py  test_openapi_curl.py  test_openapi_indexer.py  test_openapi_intent.py  test_openapi_parser.py  test_openapi_qdrant_store.py  test_rag_sources.py  test_rag_sync.py  test_sync_state_store.py
