[project]
name = "qdrant-mcp"
version = "0.1.2"
description = "MCP server for semantic search over Confluence and Allure TestOps via Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.3",
    "qdrant-client>=1.9.1",
    "openai>=1.30.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
qdrant-mcp = "qdrant_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
